# fetch

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: benchmark.rs  quickstart.rs
src/: lib.rs
wasm/: Cargo.toml  fetch.mjs
wasm/examples/: browser.html
wasm/src/: lib.rs
wasm/tests/: benchmark.mjs  smoke.mjs
