[package]
name = "wordcab-fetch"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Local-first semantic retrieval with a 1-bit ANN graph and exact reranking"
repository = "https://github.com/Wordcab/fetch"
readme = "README.md"
keywords = ["vector-search", "semantic-search", "rag", "local-first", "ann"]
categories = ["algorithms", "database-implementations"]

[workspace]
members = ["wasm"]
resolver = "2"

[dependencies]
half = "2.6"
thiserror = "2"
usearch = { version = "2.26.0", default-features = false }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
